fix(layout): added test for gap value list

--- a/test/test.scss
+++ b/test/test.scss
@@ -5,5 +5,7 @@ $includeResponsiveApi: true;
 
 @include fx.attribute-selectors($includeResponsiveApi);
 @include fx.class-selectors($includeResponsiveApi);
-@include fx.gap-attribute-selectors(1, 16, px em, $includeResponsiveApi);
-@include fx.gap-class-selectors(1, 16, px em, $includeResponsiveApi);
+@include fx.gap-attribute-selectors(1, 8, px em, $includeResponsiveApi);
+@include fx.gap-class-selectors(1, 8, px em, $includeResponsiveApi);
+@include fx.gap-attribute-selectors(16 32 48, null, px em, $includeResponsiveApi);
+@include fx.gap-class-selectors(16 32 48, null, px em, $includeResponsiveApi);
